# kithenstonecatalog

./: .gitignore  README.md  pyproject.toml
.agents/: project-architecture.md
.agents/skills/: README.md
.agents/skills/architecture-decision-records-adr-5/: SKILL.md  SOURCE.md
.agents/skills/django-web-framework/: SKILL.md  SOURCE.md
.agents/skills/project-architecture-planning/: SKILL.md  SOURCE.md
.agents/skills/python-code-review-linting-1/: SKILL.md  SOURCE.md
.agents/skills/seo-expert/: SKILL.md  SOURCE.md
.agents/skills/site-architecture-assistant/: SKILL.md  SOURCE.md
.agents/skills/technical-seo-auditor-1783336230014/: SKILL.md  SOURCE.md
mysite/basic_page/: admin.py  apps.py  middleware.py  models.py  s.py  seo.py  seo_views.py  urls.py  views.py
mysite/basic_page/migrations/: 0001_initial.py  0002_remove_company_created_at.py
mysite/basic_page/utils/: table_export.py
mysite/catalog/: admin.py  middleware.py  models.py  urls.py  views.py
mysite/catalog/migrations/: 0001_initial.py  0003_alter_stone_material.py  (+10 more)
mysite/front/: page45073253.html  page45128437.html  page45356997.html  page45585483.html  page45643781.html  page45645015.html  page45758267.html  page45773539.html  page45773669.html  page45773985.html  page46621539.html  page46646809.html  page46653351.html  page46666977.html  page46716883.html  page46761203.html  page46779915.html  page46876083.html  page48013929.html  page48014037.html  page48014045.html  page48014075.html  page48405109.html
mysite/my_utils/: mass_change_text.py
mysite/mysite/: settings.py  urls.py
(+159 files in other folders)
