[tool.poetry]
name = "stonecatalog"
version = "0.1.0"
description = "Simple stone catalog with postgres and django(all from django-box)"
authors = ["Bergenham"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"
pillow = "^11.2.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
